--- a/e-Hospital.Infrastructure/e-Hospital.Infrastructure.csproj
+++ b/e-Hospital.Infrastructure/e-Hospital.Infrastructure.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" />
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
