--- a/e-Hospital.Api/appsettings.json
+++ b/e-Hospital.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=e-HospitalDb;User Id=postgres;Password=joma1305;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=e-HospitalDb;User Id=postgres;Password=12345;"
   },
 
   "JWTConfiguration": {
